--- a/Unidades de Medida/index.html
+++ b/Unidades de Medida/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Unidades de Medida</title>
+    <title>Unidades de medida</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
